cmake_minimum_required(VERSION 3.22)
project(CMAKE)

set(CMAKE_CXX_COMPILER /usr/bin/g++)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "-g -Wall")
set(CMAKE_VERBOSE_MAKEFILE OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS OFF)

file(GLOB SOURCE_FILES *.cpp)
ADD_EXECUTABLE(main ${SOURCE_FILES})
